# ongearm

./: CMakeLists.txt  README.md
include/: events.hpp  parser.hpp  syncer.hpp
sc/: README.md  fint.py  gcd.py  mkidx.py  ntmv.py  visz.py
sc/ntime/: __init__.py
src/test/: asserts.hpp  debug.hpp  parser.cpp  recept.cpp  t0.cpp
src/wdmltd/: README.md  config.cpp  config.hpp  config.toml  ctrl.cpp  ctrl.hpp  jobs.hpp  main.cpp  main_ctl.cpp  main_daemon.cpp  phantom.cpp  phantom.hpp  ptsvr.cpp  ptsvr.hpp  recept.hpp  test.dpad.cpp
